Add env variables to dagster

--- a/helm-chart/templates/app-deploy-pgdb.yaml
+++ b/helm-chart/templates/app-deploy-pgdb.yaml
@@ -62,5 +62,5 @@ spec:
       volumes:
         - name: database
           persistentVolumeClaim:
-            claimName: "{{ .Release.Name }}-shared-storage-pvc"
+            claimName: "{{ .Release.Name }}-pgdb-storage-pvc"
 
