--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ build-app:
   before_script:
     - docker info
   script:
-    ###BUILDING###
+    ###BUILDING####
     - echo "Building Docker image for deeptsf backend..."
     - docker build --target backend -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_BACKEND} ./deeptsf_backend
 
@@ -76,7 +76,7 @@ deploy-dev:
     - echo "Checking Kubernetes cluster connectivity..."
     - kubectl get nodes
     - echo "Deploying to Rancher using Helm..."
-    - helm upgrade --install deeptsf-backend ./helm-chart -f helm-chart/values.yaml --namespace iccs --set storageClassName=longhorn --set registry.password=${HARBOR_ROBOT_PASSWORD} --set registry.username=${HARBOR_ROBOT_USER} --set registry.registry=${HARBOR_HOST} --set env.host=.dev.aiodp.ai --set env.marketplace=platform.aiodp.ai --set env.AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} --set env.AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} --set env.MINIO_CLIENT_URL=${MINIO_CLIENT_URL} --set env.MINIO_SSL=${MINIO_SSL} --set env.MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI} --set env.MLFLOW_S3_ENDPOINT_URL=${MLFLOW_S3_ENDPOINT_URL} --set env.MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY} --set env.MINIO_SECRET_KEY=${MINIO_SECRET_KEY} --set env.USE_AUTH=${USE_AUTH} --set env.KEYCLOAK_ID=${KEYCLOAK_ID} --set env.KEYCLOAK_SECRET=${KEYCLOAK_SECRET} --set env.TOKEN_ISSUER_URL=${TOKEN_ISSUER_URL} --set env.PYTHONUNBUFFERED=${PYTHONUNBUFFERED} --set env.CELERYD_HIJACK_ROOT_LOGGER=${CELERYD_HIJACK_ROOT_LOGGER} --set env.CELERY_BROKER_URL=${CELERY_BROKER_URL} --set env.CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND} --set env.POSTGRES_USER=${POSTGRES_USER} --set env.POSTGRES_DATABASE=${POSTGRES_DATABASE} --set env.POSTGRES_PASSWORD=${POSTGRES_PASSWORD} --set env.POSTGRES_HOST=${POSTGRES_HOST}--set commitHash=${CI_COMMIT_SHA}
+    - helm upgrade --install deeptsf-backend ./helm-chart -f helm-chart/values.yaml --namespace iccs --set storageClassName=longhorn --set registry.password=${HARBOR_ROBOT_PASSWORD} --set registry.username=${HARBOR_ROBOT_USER} --set registry.registry=${HARBOR_HOST} --set env.host=.dev.aiodp.ai --set env.marketplace=platform.aiodp.ai --set env.AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} --set env.AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} --set env.MINIO_CLIENT_URL=${MINIO_CLIENT_URL} --set env.MINIO_SSL=${MINIO_SSL} --set env.MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI} --set env.MLFLOW_S3_ENDPOINT_URL=${MLFLOW_S3_ENDPOINT_URL} --set env.MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY} --set env.MINIO_SECRET_KEY=${MINIO_SECRET_KEY} --set env.USE_AUTH=${USE_AUTH} --set env.KEYCLOAK_ID=${KEYCLOAK_ID} --set env.KEYCLOAK_SECRET=${KEYCLOAK_SECRET} --set env.TOKEN_ISSUER_URL=${TOKEN_ISSUER_URL} --set env.PYTHONUNBUFFERED=${PYTHONUNBUFFERED} --set env.CELERYD_HIJACK_ROOT_LOGGER=${CELERYD_HIJACK_ROOT_LOGGER} --set env.CELERY_BROKER_URL=${CELERY_BROKER_URL} --set env.CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND} --set env.POSTGRES_USER=${POSTGRES_USER} --set env.POSTGRES_DATABASE=${POSTGRES_DATABASE} --set env.POSTGRES_PASSWORD=${POSTGRES_PASSWORD} --set env.POSTGRES_HOST=${POSTGRES_HOST} --set commitHash=${CI_COMMIT_SHA}
 
   only:
     - master
