Add env variables to dagster

--- a/deeptsf_backend/dagster_deeptsf/dagster.yaml
+++ b/deeptsf_backend/dagster_deeptsf/dagster.yaml
@@ -3,9 +3,9 @@ run_storage:
   class: PostgresRunStorage
   config:
     postgres_db:
-      username: {env: POSTGRES_USER}
-      password: {env: POSTGRES_PASSWORD}
-      hostname: {env: POSTGRES_HOST}
+      username: {{ .Values.env.POSTGRES_USER }}
+      password: {{ .Values.env.POSTGRES_PASSWORD }}
+      hostname: {{ .Values.env.POSTGRES_HOST }}
       db_name: dagster_celery
       port: 5432
 
@@ -14,9 +14,9 @@ event_log_storage:
   class: PostgresEventLogStorage
   config:
     postgres_db:
-      username: {env: POSTGRES_USER}
-      password: {env: POSTGRES_PASSWORD}
-      hostname: {env: POSTGRES_HOST}
+      username: {{ .Values.env.POSTGRES_USER }}
+      password: {{ .Values.env.POSTGRES_PASSWORD }}
+      hostname: {{ .Values.env.POSTGRES_HOST }}
       db_name: dagster_celery
       port: 5432
 
@@ -25,9 +25,9 @@ schedule_storage:
   class: PostgresScheduleStorage
   config:
     postgres_db:
-      username: {env: POSTGRES_USER}
-      password: {env: POSTGRES_PASSWORD}
-      hostname: {env: POSTGRES_HOST}
+      username: {{ .Values.env.POSTGRES_USER }}
+      password: {{ .Values.env.POSTGRES_PASSWORD }}
+      hostname: {{ .Values.env.POSTGRES_HOST }}
       db_name: dagster_celery
       port: 5432
 
@@ -40,7 +40,7 @@ compute_logs:
     prefix: "dagster-compute-logs"
     use_ssl: true
     verify: false
-    endpoint_url: {env: MLFLOW_S3_ENDPOINT_URL}
+    endpoint_url: {{ .Values.env.MLFLOW_S3_ENDPOINT_URL }} 
     skip_empty_files: true
     upload_interval: 1
     show_url_only: false
