Add env variables to dagster

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -69,6 +69,7 @@ env:
   POSTGRES_DATABASE: ""
   POSTGRES_PASSWORD: ""
   POSTGRES_HOST: ""
+  DAGSTER_HOME: "/app/dagster_deeptsf"
 
 ingress:
   enabled: true
