--- a/helm-chart/templates/app-deploy-dagster.yaml
+++ b/helm-chart/templates/app-deploy-dagster.yaml
@@ -91,6 +91,9 @@ spec:
           value: {{ required "CELERY_BROKER_URL environment variable is required" .Values.env.CELERY_BROKER_URL | quote }}
         - name: POSTGRES_HOST
           value: {{ required "POSTGRES_HOST environment variable is required" .Values.env.POSTGRES_HOST | quote }}
+        - name: DAGSTER_HOME
+          value: {{ required "DAGSTER_HOME environment variable is required" .Values.env.DAGSTER_HOME | quote }}
+
 
         ports:
         - containerPort: 8006
