--- a/helm-chart/templates/app-deploy-backend.yaml
+++ b/helm-chart/templates/app-deploy-backend.yaml
@@ -73,6 +73,12 @@ spec:
           value: {{ required "KEYCLOAK_ID environment variable is required" .Values.env.KEYCLOAK_ID | quote }}
         - name: KEYCLOAK_SECRET
           value: {{ required "KEYCLOAK_SECRET environment variable is required" .Values.env.KEYCLOAK_SECRET | quote }}
+        - name: CELERYD_HIJACK_ROOT_LOGGER 
+          value: {{ required "CELERYD_HIJACK_ROOT_LOGGER  environment variable is required" .Values.env.CELERYD_HIJACK_ROOT_LOGGER  | quote }}
+        - name: CELERY_RESULT_BACKEND
+          value: {{ required "CELERY_RESULT_BACKEND environment variable is required" .Values.env.CELERY_RESULT_BACKEND | quote }}
+        - name: CELERY_BROKER_URL
+          value: {{ required "CELERY_BROKER_URL environment variable is required" .Values.env.CELERY_BROKER_URL | quote }}
         - name: TOKEN_ISSUER_URL
           value: {{ required "TOKEN_ISSUER_URL environment variable is required" .Values.env.TOKEN_ISSUER_URL | quote }}
         ports:
