--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -3,7 +3,6 @@ backend:
     name: deeptsf-backend
   image:
     repository: harbor.aiodp.ai/iccs/deeptsf-backend
-    tag: latest
   replicas: 1
   memory_limit: 4Gi
 
@@ -12,7 +11,6 @@ dagster:
     name: deeptsf-dagster
   image:
     repository: harbor.aiodp.ai/iccs/deeptsf-dagster
-    tag: latest
   replicas: 1
   memory_limit: 4Gi
 
@@ -34,6 +32,7 @@ env:
   KEYCLOAK_ID: ""
   KEYCLOAK_SECRET: ""
   TOKEN_ISSUER_URL: ""
+  VERSION: ""
 
 ingress:
   enabled: true
