--- a/helm-chart/templates/app-deploy-worker.yaml
+++ b/helm-chart/templates/app-deploy-worker.yaml
@@ -21,7 +21,7 @@ spec:
       - name: {{ .Release.Name }}-image-pull-secret
       containers:
       - name: deeptsf-worker
-        image: "{{ .Values.worker.image.repository }}:{{ .Values.worker.image.tag }}"
+        image: "{{ .Values.worker.image.repository }}:{{ .Values.env.VERSION }}"
         imagePullPolicy: Always
         resources:
           limits:
@@ -76,3 +76,5 @@ spec:
           value: {{ required "POSTGRES_HOST environment variable is required" .Values.env.POSTGRES_HOST | quote }}
         - name: DAGSTER_HOME
           value: {{ required "DAGSTER_HOME environment variable is required" .Values.env.DAGSTER_HOME | quote }}
+        - name: VERSION
+          value: {{ required "VERSION environment variable is required" .Values.env.VERSION | quote }}
