--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,11 +5,12 @@ stages:
   - deploy-prod
 
 variables:
-  HARBOR_IMAGE_BACKEND: "${HARBOR_HOST}/iccs/deeptsf-backend:latest"
-  HARBOR_IMAGE_DAGSTER: "${HARBOR_HOST}/iccs/deeptsf-dagster:latest"
-  HARBOR_IMAGE_WORKER: "${HARBOR_HOST}/iccs/deeptsf-worker:latest"
-  HARBOR_IMAGE_PGDB: "${HARBOR_HOST}/iccs/deeptsf-pgdb:latest"
-  HARBOR_IMAGE_REDIS: "${HARBOR_HOST}/iccs/deeptsf-redis:latest"
+  VERSION: "1.1.0"
+  HARBOR_IMAGE_BACKEND: "${HARBOR_HOST}/iccs/deeptsf-backend"
+  HARBOR_IMAGE_DAGSTER: "${HARBOR_HOST}/iccs/deeptsf-dagster"
+  HARBOR_IMAGE_WORKER: "${HARBOR_HOST}/iccs/deeptsf-worker"
+  HARBOR_IMAGE_PGDB: "${HARBOR_HOST}/iccs/deeptsf-pgdb"
+  HARBOR_IMAGE_REDIS: "${HARBOR_HOST}/iccs/deeptsf-redis"
 
 
 build-app:
@@ -24,39 +25,39 @@ build-app:
   script:
     ###BUILDING####
     - echo "Building Docker image for deeptsf backend..."
-    - docker build --target backend -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_BACKEND} ./deeptsf_backend
+    - docker build --target backend -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_BACKEND}:{VERSION} ./deeptsf_backend
 
     - echo "Building Docker image for dagster..."
-    - docker build --target dagster -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_DAGSTER} ./deeptsf_backend
+    - docker build --target dagster -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_DAGSTER}:{VERSION} ./deeptsf_backend
 
     - echo "Building Docker image for worker..."
-    - docker build --target celery-worker -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_WORKER} ./deeptsf_backend
+    - docker build --target celery-worker -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_WORKER}:{VERSION} ./deeptsf_backend
 
     - echo "Building pgdb image..."
-    - docker build -t ${HARBOR_IMAGE_PGDB} ./deeptsf_backend/docker-db
+    - docker build -t ${HARBOR_IMAGE_PGDB}:{VERSION} ./deeptsf_backend/docker-db
 
     - echo "Pulling redis image..."
     - docker pull redis:7-alpine
-    - docker tag  redis:7-alpine  ${HARBOR_IMAGE_REDIS}
+    - docker tag  redis:7-alpine  ${HARBOR_IMAGE_REDIS}:{VERSION}
 
     ###PUSHING###
     - echo "Logging into Harbor using Robot Account..."
     - echo ${HARBOR_ROBOT_PASSWORD} | docker login ${HARBOR_HOST} -u ${HARBOR_ROBOT_USER} --password-stdin
 
     - echo "Pushing Backend Docker image to Harbor..."
-    - docker push ${HARBOR_IMAGE_BACKEND}
+    - docker push ${HARBOR_IMAGE_BACKEND}:{VERSION}
 
     - echo "Pushing Dagster Docker image to Harbor..."
-    - docker push ${HARBOR_IMAGE_DAGSTER}
+    - docker push ${HARBOR_IMAGE_DAGSTER}:{VERSION}
 
     - echo "Pushing worker Docker image to Harbor..."
-    - docker push ${HARBOR_IMAGE_WORKER}
+    - docker push ${HARBOR_IMAGE_WORKER}:{VERSION}
 
     - echo "Pushing pgdb Docker image to Harbor..."
-    - docker push ${HARBOR_IMAGE_PGDB}
+    - docker push ${HARBOR_IMAGE_PGDB}:{VERSION}
 
     - echo "Pushing redis Docker image to Harbor..."
-    - docker push ${HARBOR_IMAGE_REDIS}
+    - docker push ${HARBOR_IMAGE_REDIS}:{VERSION}
 
   only:
     - dagster_intergration
@@ -76,10 +77,24 @@ deploy-dev:
     - echo "Checking Kubernetes cluster connectivity..."
     - kubectl get nodes
     - echo "Deploying to Rancher using Helm..."
-    - helm upgrade --install deeptsf-backend ./helm-chart -f helm-chart/values.yaml --namespace iccs --set storageClassName=longhorn --set registry.password=${HARBOR_ROBOT_PASSWORD} --set registry.username=${HARBOR_ROBOT_USER} --set registry.registry=${HARBOR_HOST} --set env.host=.dev.aiodp.ai --set env.marketplace=platform.aiodp.ai --set env.AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} --set env.AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} --set env.MINIO_CLIENT_URL=${MINIO_CLIENT_URL} --set env.MINIO_SSL=${MINIO_SSL} --set env.MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI} --set env.MLFLOW_S3_ENDPOINT_URL=${MLFLOW_S3_ENDPOINT_URL} --set env.MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY} --set env.MINIO_SECRET_KEY=${MINIO_SECRET_KEY} --set env.USE_AUTH=${USE_AUTH} --set env.KEYCLOAK_ID=${KEYCLOAK_ID} --set env.KEYCLOAK_SECRET=${KEYCLOAK_SECRET} --set env.TOKEN_ISSUER_URL=${TOKEN_ISSUER_URL} --set env.PYTHONUNBUFFERED=${PYTHONUNBUFFERED} --set env.CELERYD_HIJACK_ROOT_LOGGER=${CELERYD_HIJACK_ROOT_LOGGER} --set env.CELERY_BROKER_URL=${CELERY_BROKER_URL} --set env.CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND} --set env.POSTGRES_USER=${POSTGRES_USER} --set env.POSTGRES_DATABASE=${POSTGRES_DATABASE} --set env.POSTGRES_PASSWORD=${POSTGRES_PASSWORD} --set env.POSTGRES_HOST=${POSTGRES_HOST} --set commitHash=${CI_COMMIT_SHA}
+    - helm upgrade --install deeptsf-backend ./helm-chart -f helm-chart/values.yaml \
+     --namespace iccs --set storageClassName=longhorn --set registry.password=${HARBOR_ROBOT_PASSWORD} \
+     --set registry.username=${HARBOR_ROBOT_USER} --set registry.registry=${HARBOR_HOST} \
+     --set env.host=.dev.aiodp.ai --set env.marketplace=platform.aiodp.ai \
+     --set env.VERSION=&{VERSION}
+     --set env.AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} --set env.AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} \
+     --set env.MINIO_CLIENT_URL=${MINIO_CLIENT_URL} --set env.MINIO_SSL=${MINIO_SSL} \
+     --set env.MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI} --set env.MLFLOW_S3_ENDPOINT_URL=${MLFLOW_S3_ENDPOINT_URL} \
+     --set env.MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY} --set env.MINIO_SECRET_KEY=${MINIO_SECRET_KEY} \
+     --set env.USE_AUTH=${USE_AUTH} --set env.KEYCLOAK_ID=${KEYCLOAK_ID} --set env.KEYCLOAK_SECRET=${KEYCLOAK_SECRET} \
+     --set env.TOKEN_ISSUER_URL=${TOKEN_ISSUER_URL} --set env.PYTHONUNBUFFERED=${PYTHONUNBUFFERED} \
+     --set env.CELERYD_HIJACK_ROOT_LOGGER=${CELERYD_HIJACK_ROOT_LOGGER} --set env.CELERY_BROKER_URL=${CELERY_BROKER_URL} \
+     --set env.CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND} --set env.POSTGRES_USER=${POSTGRES_USER} \
+     --set env.POSTGRES_DATABASE=${POSTGRES_DATABASE} --set env.POSTGRES_PASSWORD=${POSTGRES_PASSWORD} \
+     --set env.POSTGRES_HOST=${POSTGRES_HOST} --set commitHash=${CI_COMMIT_SHA}
 
   only:
-    - master
+    - dagster_intergration
   tags:
     - shared
   environment:
@@ -97,7 +112,7 @@ deploy-stage:
     - export KUBECONFIG=${KUBECONFIG_STAGE}
   script:
     - echo "Deploying to Rancher using Helm..."
-    - helm upgrade --install deeptsf-backend ./helm-chart -f helm-chart/values.yaml --namespace iccs --set storageClassName=longhorn --set registry.password=${HARBOR_ROBOT_PASSWORD} --set registry.username=${HARBOR_ROBOT_USER} --set registry.registry=${HARBOR_HOST} --set env.host=.stage.aiodp.ai --set env.marketplace=platform.aiodp.ai --set env.AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} --set env.AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} --set env.MINIO_CLIENT_URL=${MINIO_CLIENT_URL} --set env.MINIO_SSL=${MINIO_SSL} --set env.MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI} --set env.MLFLOW_S3_ENDPOINT_URL=${MLFLOW_S3_ENDPOINT_URL} --set env.MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY} --set env.MINIO_SECRET_KEY=${MINIO_SECRET_KEY} --set env.USE_AUTH=${USE_AUTH} --set env.KEYCLOAK_ID=${KEYCLOAK_ID} --set env.KEYCLOAK_SECRET=${KEYCLOAK_SECRET} --set env.TOKEN_ISSUER_URL=${TOKEN_ISSUER_URL} --set env.PYTHONUNBUFFERED=${PYTHONUNBUFFERED} --set env.CELERYD_HIJACK_ROOT_LOGGER=${CELERYD_HIJACK_ROOT_LOGGER} --set env.CELERY_BROKER_URL=${CELERY_BROKER_URL} --set env.CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND} --set env.POSTGRES_USER=${POSTGRES_USER} --set env.POSTGRES_DATABASE=${POSTGRES_DATABASE} --set env.POSTGRES_PASSWORD=${POSTGRES_PASSWORD} --set env.POSTGRES_HOST=${POSTGRES_HOST} --set commitHash=${CI_COMMIT_SHA}
+    - helm upgrade --install deeptsf-backend ./helm-chart -f helm-chart/values.yaml --namespace iccs --set storageClassName=longhorn --set registry.password=${HARBOR_ROBOT_PASSWORD} --set registry.username=${HARBOR_ROBOT_USER} --set registry.registry=${HARBOR_HOST} --set env.host=.stage.aiodp.ai --set env.marketplace=platform.aiodp.ai --set env.AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} --set env.AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} --set env.MINIO_CLIENT_URL=${MINIO_CLIENT_URL} --set env.MINIO_SSL=${MINIO_SSL} --set env.MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI} --set env.MLFLOW_S3_ENDPOINT_URL=${MLFLOW_S3_ENDPOINT_URL} --set env.MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY} --set env.MINIO_SECRET_KEY=${MINIO_SECRET_KEY} --set env.USE_AUTH=${USE_AUTH} --set env.KEYCLOAK_ID=${KEYCLOAK_ID} --set env.KEYCLOAK_SECRET=${KEYCLOAK_SECRET} --set env.TOKEN_ISSUER_URL=${TOKEN_ISSUER_URL} --set env.PYTHONUNBUFFERED=${PYTHONUNBUFFERED} --set env.CELERYD_HIJACK_ROOT_LOGGER=${CELERYD_HIJACK_ROOT_LOGGER} --set env.CELERY_BROKER_URL=${CELERY_BROKER_URL} --set env.CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND} --set env.POSTGRES_USER=${POSTGRES_USER} --set env.POSTGRES_DATABASE=${POSTGRES_DATABASE} --set env.POSTGRES_PASSWORD=${POSTGRES_PASSWORD} --set env.POSTGRES_HOST=${POSTGRES_HOST} --set env.VERSION=&{VERSION} --set commitHash=${CI_COMMIT_SHA}
   only:
     - dagster_intergration
   tags:
@@ -117,9 +132,9 @@ deploy-prod:
     - export KUBECONFIG=${KUBECONFIG_PROD}
   script:
     - echo "Deploying to Rancher using Helm..."
-    - helm upgrade --install deeptsf-backend ./helm-chart -f helm-chart/values.yaml --namespace iccs --set storageClassName=longhorn --set registry.password=${HARBOR_ROBOT_PASSWORD} --set registry.username=${HARBOR_ROBOT_USER} --set registry.registry=${HARBOR_HOST} --set env.host=.aiodp.ai --set env.marketplace=platform.aiodp.ai --set env.AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} --set env.AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} --set env.MINIO_CLIENT_URL=${MINIO_CLIENT_URL} --set env.MINIO_SSL=${MINIO_SSL} --set env.MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI} --set env.MLFLOW_S3_ENDPOINT_URL=${MLFLOW_S3_ENDPOINT_URL} --set env.MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY} --set env.MINIO_SECRET_KEY=${MINIO_SECRET_KEY} --set env.USE_AUTH=${USE_AUTH} --set env.KEYCLOAK_ID=${KEYCLOAK_ID} --set env.KEYCLOAK_SECRET=${KEYCLOAK_SECRET} --set env.TOKEN_ISSUER_URL=${TOKEN_ISSUER_URL} --set env.PYTHONUNBUFFERED=${PYTHONUNBUFFERED} --set env.CELERYD_HIJACK_ROOT_LOGGER=${CELERYD_HIJACK_ROOT_LOGGER} --set env.CELERY_BROKER_URL=${CELERY_BROKER_URL} --set env.CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND} --set env.POSTGRES_USER=${POSTGRES_USER} --set env.POSTGRES_DATABASE=${POSTGRES_DATABASE} --set env.POSTGRES_PASSWORD=${POSTGRES_PASSWORD} --set env.POSTGRES_HOST=${POSTGRES_HOST} --set commitHash=${CI_COMMIT_SHA}
+    - helm upgrade --install deeptsf-backend ./helm-chart -f helm-chart/values.yaml --namespace iccs --set storageClassName=longhorn --set registry.password=${HARBOR_ROBOT_PASSWORD} --set registry.username=${HARBOR_ROBOT_USER} --set registry.registry=${HARBOR_HOST} --set env.host=.aiodp.ai --set env.marketplace=platform.aiodp.ai --set env.AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} --set env.AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} --set env.MINIO_CLIENT_URL=${MINIO_CLIENT_URL} --set env.MINIO_SSL=${MINIO_SSL} --set env.MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI} --set env.MLFLOW_S3_ENDPOINT_URL=${MLFLOW_S3_ENDPOINT_URL} --set env.MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY} --set env.MINIO_SECRET_KEY=${MINIO_SECRET_KEY} --set env.USE_AUTH=${USE_AUTH} --set env.KEYCLOAK_ID=${KEYCLOAK_ID} --set env.KEYCLOAK_SECRET=${KEYCLOAK_SECRET} --set env.TOKEN_ISSUER_URL=${TOKEN_ISSUER_URL} --set env.PYTHONUNBUFFERED=${PYTHONUNBUFFERED} --set env.CELERYD_HIJACK_ROOT_LOGGER=${CELERYD_HIJACK_ROOT_LOGGER} --set env.CELERY_BROKER_URL=${CELERY_BROKER_URL} --set env.CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND} --set env.POSTGRES_USER=${POSTGRES_USER} --set env.POSTGRES_DATABASE=${POSTGRES_DATABASE} --set env.POSTGRES_PASSWORD=${POSTGRES_PASSWORD} --set env.POSTGRES_HOST=${POSTGRES_HOST} --set env.VERSION=&{VERSION} --set commitHash=${CI_COMMIT_SHA}
   only:
-    - mastermaster
+    - master
   tags:
     - shared
   environment:
