--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,39 +25,39 @@ build-app:
   script:
     ###BUILDING####
     - echo "Building Docker image for deeptsf backend..."
-    - docker build --target backend -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_BACKEND}:{VERSION} ./deeptsf_backend
+    - docker build --target backend -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_BACKEND}:${VERSION} ./deeptsf_backend
 
     - echo "Building Docker image for dagster..."
-    - docker build --target dagster -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_DAGSTER}:{VERSION} ./deeptsf_backend
+    - docker build --target dagster -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_DAGSTER}:${VERSION} ./deeptsf_backend
 
     - echo "Building Docker image for worker..."
-    - docker build --target celery-worker -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_WORKER}:{VERSION} ./deeptsf_backend
+    - docker build --target celery-worker -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_WORKER}:${VERSION} ./deeptsf_backend
 
     - echo "Building pgdb image..."
-    - docker build -t ${HARBOR_IMAGE_PGDB}:{VERSION} ./deeptsf_backend/docker-db
+    - docker build -t ${HARBOR_IMAGE_PGDB}:${VERSION} ./deeptsf_backend/docker-db
 
     - echo "Pulling redis image..."
     - docker pull redis:7-alpine
-    - docker tag  redis:7-alpine  ${HARBOR_IMAGE_REDIS}:{VERSION}
+    - docker tag  redis:7-alpine  ${HARBOR_IMAGE_REDIS}:${VERSION}
 
     ###PUSHING###
     - echo "Logging into Harbor using Robot Account..."
     - echo ${HARBOR_ROBOT_PASSWORD} | docker login ${HARBOR_HOST} -u ${HARBOR_ROBOT_USER} --password-stdin
 
     - echo "Pushing Backend Docker image to Harbor..."
-    - docker push ${HARBOR_IMAGE_BACKEND}:{VERSION}
+    - docker push ${HARBOR_IMAGE_BACKEND}:${VERSION}
 
     - echo "Pushing Dagster Docker image to Harbor..."
-    - docker push ${HARBOR_IMAGE_DAGSTER}:{VERSION}
+    - docker push ${HARBOR_IMAGE_DAGSTER}:${VERSION}
 
     - echo "Pushing worker Docker image to Harbor..."
-    - docker push ${HARBOR_IMAGE_WORKER}:{VERSION}
+    - docker push ${HARBOR_IMAGE_WORKER}:${VERSION}
 
     - echo "Pushing pgdb Docker image to Harbor..."
-    - docker push ${HARBOR_IMAGE_PGDB}:{VERSION}
+    - docker push ${HARBOR_IMAGE_PGDB}:${VERSION}
 
     - echo "Pushing redis Docker image to Harbor..."
-    - docker push ${HARBOR_IMAGE_REDIS}:{VERSION}
+    - docker push ${HARBOR_IMAGE_REDIS}:${VERSION}
 
   only:
     - dagster_intergration
