--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,7 +81,7 @@ deploy-dev:
      --namespace iccs --set storageClassName=longhorn --set registry.password=${HARBOR_ROBOT_PASSWORD} \
      --set registry.username=${HARBOR_ROBOT_USER} --set registry.registry=${HARBOR_HOST} \
      --set env.host=.dev.aiodp.ai --set env.marketplace=platform.aiodp.ai \
-     --set env.VERSION=${VERSION}
+     --set env.VERSION=${VERSION} \
      --set env.AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} --set env.AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} \
      --set env.MINIO_CLIENT_URL=${MINIO_CLIENT_URL} --set env.MINIO_SSL=${MINIO_SSL} \
      --set env.MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI} --set env.MLFLOW_S3_ENDPOINT_URL=${MLFLOW_S3_ENDPOINT_URL} \
