--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,7 @@ build-app:
     - docker push ${HARBOR_IMAGE_REDIS}:${VERSION}
 
   only:
-    - dagster_intergration
+    - master
   tags:
     - shared
 
