--- a/deeptsf_backend/docker-compose-keycloak.yml
+++ b/deeptsf_backend/docker-compose-keycloak.yml
@@ -44,6 +44,7 @@ services:
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+    mem_limit: 26g
     networks:
        - keycloak_net
 
