--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "deeptsf_backend/darts_mlp"]
 	path = deeptsf_backend/darts_mlp
-	url = git@github.com:nickbrakis/darts-mlp.git
+	url = https://github.com/nickbrakis/darts-mlp.git
