--- a/deeptsf_backend/Dockerfile_keycloak
+++ b/deeptsf_backend/Dockerfile_keycloak
@@ -30,6 +30,10 @@ RUN conda update conda
 RUN conda env create -f conda.yaml
 
 RUN conda init bash
+
+COPY ./darts_mlp ./darts_mlp
+SHELL ["conda", "run", "-n", "DeepTSF_env", "/bin/bash", "-c"]
+RUN pip install -e ./darts_mlp
 #############################BACKEND#######################################
 
 FROM base AS backend
