Fix bugs after merge

--- a/deeptsf_backend/.env.auth.example
+++ b/deeptsf_backend/.env.auth.example
@@ -8,16 +8,24 @@ AWS_ACCESS_KEY_ID=<insert minio user>
 AWS_SECRET_ACCESS_KEY=<insert minio pass>
 MINIO_CLIENT_URL=<insert minio client url>
 MINIO_SSL=true
+host=host(.<insert rest of domain_name>)
 
 # frontend
 CHOKIDAR_USEPOLLING=true
 REACT_APP_NAME=Load_Forecasting_Dashboard
 
 # auth
-USE_KEYCLOAK=True
+USE_AUTH=keycloak
 KEYCLOAK_ID=<insert keycloak client id>
 KEYCLOAK_SECRET=<insert keycloak secret>
 TOKEN_ISSUER_URL=<insert keycloak token issuer url>
+
+#dagster
+DAGSTER_ENDPOINT_URL=<insert dagster server uri>
+
+# Celery config
+CELERY_BROKER_URL=<insert celery broker url>
+CELERY_RESULT_BACKEND=<insert celery result backend url>
 
 # mlflow configuration
 GIT_PYTHON_REFRESH=quiet
@@ -30,3 +38,16 @@ MONGO_DB_NAME=<mongo_database_name>
 MONGO_COLLECTION_UC7=<mongo_collection_name_uc7>
 MONGO_COLLECTION_UC6=<mongo_collection_name_uc6>
 MONGO_COLLECTION_UC2=<mongo_collection_name_uc2>
+
+#POSTFRESS
+POSTGRES_USER=<insert postgres user>
+POSTGRES_DATABASE=<insert postgres database>
+POSTGRES_PASSWORD=<insert postgres password>
+POSTGRES_HOST=<insert postgres host>
+# MINI IO SETTINGS
+
+MINIO_PORT_API=9000
+MINIO_PORT_UI=9001
+MINIO_ROOT_USER=<insert minio root user>
+MINIO_ROOT_PASSWORD=<insert minio root password>
+
